--- a/src/App.css
+++ b/src/App.css
@@ -18,3 +18,32 @@ body {
     width: 100vw;
     background-image: linear-gradient(to right, rgb(194, 90, 220), black);
 }
+
+.main-image {
+    grid-area: image; 
+    background-image: url('./assets/1.jpg');
+    width: 100%;
+    height: 100%;
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+
+.sidebar {
+    grid-area: sidebar;
+    background-color: white;
+    width: 100%;
+    height: 100%;
+}
+
+.slider-container {
+grid-area: slider;
+
+margin-top: 2rem;
+padding: 2rem;
+}
+
+.slider {
+    width: 100%;
+    cursor: pointer;
+}
