--- a/src/App.css
+++ b/src/App.css
@@ -31,9 +31,13 @@ body {
 
 .sidebar {
     grid-area: sidebar;
-    background-color: white;
+    background-color: black;
     width: 100%;
     height: 100%;
+    border-left: 5px solid grey;
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
 }
 
 .slider-container {
@@ -47,3 +51,12 @@ padding: 2rem;
     width: 100%;
     cursor: pointer;
 }
+
+.sidebar-item {
+    color: white;
+    cursor: pointer;
+    border: none;
+    outline: none;
+    background-color: black;
+}
+
